--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,27 @@ body {
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
  font-size:xx-large;
 }
+
+/*Profile*/
+.profileInfoDiv{
+  margin: 10px;
+  margin-right: 40px;
+  width: 100%;
+}
+.profileInterestDiv{
+  width: 100%;
+  margin: 10px;
+}
+.userProfileCard{
+  flex-direction: row;
+}
+
+/*DropDown*/
+.dropdown-toggle::after{
+  display: none;
+  }
+  .dropdown-toggle{
+    background-color: transparent;
+    color: black;
+    border: none;
+  }
