event form created, need to work out value from stars and checkbox

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,8 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background-color: #ede8d6;
+  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 
 /* NAV BAR */
