--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,7 @@ body {
   flex-direction: row;
 }
 
+
 /*DropDown*/
 .dropdown-toggle::after{
   display: none;
@@ -67,3 +68,20 @@ body {
     color: black;
     border: none;
   }
+
+/* EVENT FORM */
+.eventFormPhotos{
+  height: 200px;
+  width: auto;
+}
+/* event form images */
+.uploadedImagesContainer{
+  position:relative;
+  display: inline-block;
+}
+.imageDelete{
+  position:absolute;
+  top:10px;
+  right:10px;
+  border: 2px gray solid;
+}
