forms coming along

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,8 +97,40 @@ body {
   justify-content: center;
   flex-wrap:wrap;
 }
+/* User Form */
+
+.user-form-image-div{
+ display: flex;
+ align-items: center;
+}
+.user-form-image{
+  margin-top: 1rem;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 1rem;
+}
+.user-form-upload{
+margin-left: 1rem;
+}
+.user-form label {
+  margin-top: 4px;
+  margin-bottom: -2px;
+  margin-left: .5rem;
+}
 
 /*Profile*/
+.userProfileCard{
+  display: flex;
+  margin-top: 2rem;
+  width: 80%;
+  flex-direction: row;
+  border-radius: 1rem;
+  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+}
 .profileInfoDiv{
   margin: 10px;
   margin-right: 40px;
@@ -108,12 +140,17 @@ body {
   width: 100%;
   margin: 10px;
 }
-.userProfileCard{
-  flex-direction: row;
+.profile-events-header{
+  margin-top: 1rem;
+  text-align: center;
 }
 .userEventsDiv{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+}
+.profile-dropdown{
+  align-self: start;
 }
 
 
@@ -128,19 +165,57 @@ body {
   }
 
 /* EVENT FORM */
+.event-form-columns{
+  display: flex;
+  flex-direction: column;
+}
+.event-form-columns > * {
+  display: flex;
+  justify-content: space-evenly;
+}
+.event-form-title-date > * {
+  width: 45%;
+}
+.event-form-time-category > * {
+  width: 45%;
+}
+.event-form-location-city > * {
+  width: 45%;
+}
+.event-form-description{
+  margin-right: auto;
+  margin-left: auto;
+  width: 93%;
+}
+
 .eventFormPhotos{
   height: 200px;
   width: auto;
 }
 .eventStarAndPublic{
-  display: flex;
-  justify-content: space-around;
   margin-top: 20px;
-}
-.formFile{
   display: flex;
+  justify-content: space-evenly;
+}
+.react-simple-star-rating-tooltip{
+  width: 155px;
+  text-align: center;
+}
+.event-form-public-check{
+ font-size: large; 
+ font-weight: 400;
 }
 /* event form images */
+.eventImageUploadDiv{
+  margin-right: auto;
+  margin-left: auto;
+  width: 93%;
+}
+.uploadedImagesDiv{
+  margin: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+}
 .uploadedImagesContainer{
   position:relative;
   display: inline-block;
@@ -150,6 +225,10 @@ body {
   top:10px;
   right:10px;
   border: 2px gray solid;
+}
+.event-form-buttons{
+  display: flex;
+  justify-content: space-evenly;
 }
 
 
@@ -256,36 +335,6 @@ body {
   max-width: 397px;
 }
 
-/* EVENT PAGE
-.eventPage{
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.eventPageImages{
-  margin-top: 10px;
-  padding: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between ;
-}
-.eventPageLeft{
-  min-width: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.eventPageCenter{
-  align-self: center;
-  
-  margin: none!important;
-  justify-self: center;
-}
-.eventPageDropdown{
-  min-width: 150px;
-  text-align: right;
-} */
 
 /* EVENT PAGE */
 .event-page-carousel{
@@ -433,4 +482,15 @@ justify-content: center;
 }
 .search-page-category-select{
   width: 50%;
+}
+
+/* USER PAGE */
+.user-page-events-header{
+  margin-top: 1rem;
+  text-align: center;
+}
+.userEventsDiv{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
