--- a/styles/globals.css
+++ b/styles/globals.css
@@ -280,6 +280,17 @@ margin-left: 1rem;
   display: flex;
   justify-content: center;
 }
+.event-card-time-of-day::first-letter{
+  text-transform: capitalize;
+}
+.event-card-time-of-day{
+  align-self: center;
+  background-color: #f48c06;
+  padding: .1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 1rem;
+}
 
 
 /* Day Card New*/
@@ -409,18 +420,21 @@ margin-left: 1rem;
   border: #1b5983 2px solid;
   height: 3rem;
   line-height: 3rem;
+  align-self: center;
 }
 .comment-form-button{
   margin-right: .5rem;
   background-color: #1b5983;
-}
-.comment-form-user-image{
-  max-height: 40px;
-  max-width: 40px;
-  border-radius: 50%;
+  height: 3rem;
   align-self: center;
-  margin-left: .5rem;
-  margin-right: .5rem;
+}
+
+.comment-form-user-image{
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin: .5rem;
+  object-fit: cover;
 }
 
 /* COMMENT CARD */
