--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import 'bootstrap/dist/css/bootstrap.css';
+@import url('https://fonts.googleapis.com/css2?family=Bevan&display=swap');
 
 html,
 body {
@@ -6,9 +7,11 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    
 }
 .container{
   padding: 0;
+  padding-bottom: 3rem;
 }
 
 a {
@@ -21,19 +24,38 @@ a {
 }
 
 body {
-  background-color: #ede8d6;
+  background-color: #fffcf2;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 
 
 /* NAV BAR */
+.nav-nav{
+  background-color: #ECAC43!important;
+}
+.offcanvas{
+  background-color: #fffcf2!important;
+}
+
+.nav-logo-expand{
+  height: 6rem;
+  width: 6rem;
+}
+
+.offcanvas-body{
+  padding: 0rem;
+}
+.navLinks .navbar-toggler {
+  height: 2rem;
+  width: 90%;
+}
 .container-fluid{
   flex: none;
   height: 100%;
 }
 .navbar{
   padding: none;
-  height: 70px;
+  height: 80px;
 }
 .navItems{
   display: flex;
@@ -44,8 +66,8 @@ body {
  margin-left: auto;
  margin-right: auto;
  align-self: center;
- font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
- font-size:xx-large;
+ font-family: 'Bevan', cursive;
+ font-size: 4rem;
 }
 .roundUserImg{
   height: 45px;
@@ -56,12 +78,18 @@ body {
   margin: 10px;
 }
 .sign-in{
-  background-color: #4d9f0a;
+  background-color: #6a994e;
   color: black;
+  height: 3rem;
+  width: 7rem;
+  align-self: center;
 }
 .sign-out{
   background-color: firebrick;
   color: black;
+  height: 3rem;
+  align-self: center;
+  width: 7rem;
 }
 /*NAV NO SHOW ON USER FORM */
 .navNoShow{
@@ -77,6 +105,7 @@ body {
   justify-content: center;
 }
 .backgroundImage{
+  margin-top: 2rem;
   width: 100%;
   max-height: 600px;
   object-fit: cover;
@@ -84,7 +113,7 @@ body {
 .mainHeadSearch{
   position: absolute;
   align-self: center;
-  margin-bottom: 350px;
+  margin-bottom: 18rem;
 }
 .mainFeaturedDiv{
   margin-top: 1.5rem;
@@ -240,23 +269,26 @@ margin-left: 1rem;
 
 /* Event Card New */
 .event-card {
-  max-width: 400px;
+  width: 355px;
   margin: 8px;
 }
 .event-card-carousel{
-  min-width: 400px;
+  width: 100%;
 }
 .event-card-image{
-  max-height: 265px;
-  max-width: 398px; 
+  height: 265px;
+  width: 353px; 
   object-fit: cover;
 }
 .event-card-body{
   padding: 8px;
+  height: 116px;
 }
 .event-card-title {
+  height: 2rem;
   display: flex;
   justify-content: space-between;
+  overflow: scroll;
 }
 
 .event-card-header{
@@ -336,6 +368,7 @@ margin-left: 1rem;
   justify-content: center;
 }
 .day-form-events-header{
+  margin-top: 1rem;
   text-align: center;
 }
 .day-form-select-events{
@@ -364,6 +397,9 @@ margin-left: 1rem;
 .day-form-submit-buttons > *{
   width: 8rem;
   color: white;
+}
+.day-form-modal-check{
+  margin: .5rem;
 }
 
 /* Day Card New*/
@@ -485,16 +521,21 @@ margin-left: 1rem;
 }
 
 /* COMMENT FORM */
+
 .comment-form {
   margin-top: 8px;
   margin-bottom: 8px;
   display: flex;
+  justify-content: center;
 }
 .comment-form .form-control {
   border: #1b5983 2px solid;
   height: 3rem;
   line-height: 3rem;
   align-self: center;
+  overflow-wrap: break-word;
+  width: 50%;
+  line-height: normal;
 }
 .comment-form-button{
   margin-right: .5rem;
@@ -586,4 +627,20 @@ justify-content: center;
   text-align: center;
   margin-top: 1rem;
   margin-bottom: -1rem;
+}
+
+/* FOOTER */
+.footer{
+  margin-top: 1rem;
+  justify-content: space-around!important;
+  align-items: center;
+  background-color: #ECAC43;
+  position:fixed;
+  left:0;
+  bottom:0;
+  right:0;
+  height: 2rem;
+}
+.footer .nav-link {
+  color: inherit;
 }
