--- a/styles/globals.css
+++ b/styles/globals.css
@@ -149,10 +149,12 @@ align-self: flex-start;
   margin-bottom: 18rem;
 }
 .main-Featured-Div{
+  border: #2a9d8f 6px solid;
   margin-top: 1.5rem;
   display:flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem;
 }
 .featured-Content-Div{
   display:flex;
@@ -440,7 +442,7 @@ margin-left: 1rem;
 .day-card{
   display: flex;
   flex-wrap: wrap;
-  width: 816px;
+  width: 727px;
   margin: 8px;
 }
 .day-card-head{
@@ -553,6 +555,7 @@ margin-left: 1rem;
 .view-day-description{
   max-width: 800px;
   align-self: center;
+  margin-right: 8rem;
 }
 .view-day-events-header{
   margin-left: 2rem;
