--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
 }
 @media all and (max-width: 500px){
   * {
-    font-size: .75rem;
+    font-size: .75rem!important;
   }
 }
 
@@ -34,12 +34,20 @@ body {
 
 
 /* NAV BAR */
+
+@media all and (max-width: 500px){
+  .offcanvas{
+    max-width: 200px;
+    max-height: 200px;
+  }
+}
 .navbar-navbar{
   background-color: #ECAC43!important;
   width: 100%;
 }
 .offcanvas{
   background-color: #fffcf2!important;
+  max-width: 310px;
 }
 .nav-button-expand{
   height: 4rem!important;
@@ -52,17 +60,17 @@ body {
 }
 .nav-logo-container{
 display:flex!important;
+justify-content: center!important;
 }
 
 .nav-logo-expand{
-  height: 6rem!important;
-  width: 6rem!important;
-  justify-self: center!important;
-  
+  height: 8rem!important;
+  width: 8rem!important;
 }
 .btn-close{
-margin-left: 8.5rem!important;
-align-self: flex-start!important;
+height: 1.5rem;
+width: 1.5rem;
+border: 1px solid black;
 }
 
 .offcanvas-body{
@@ -70,6 +78,7 @@ align-self: flex-start!important;
 }
 .nav-Links{
   justify-content: center!important;
+  padding-right: 0!important;
 }
 
 .nav-Links .navbar-toggler {
@@ -95,7 +104,7 @@ align-self: flex-start!important;
  margin-right: auto!important;
  align-self: center!important;
  font-family: 'Bevan', cursive!important;
- font-size: 2rem!important;
+ font-size: 3rem!important;
 }
 .round-User-Img{
   height: 45px!important;
@@ -118,7 +127,7 @@ align-self: flex-start!important;
   align-self: center!important;
   width: 7rem!important;
 }
-@media all and (max-width: 400px) {
+@media all and (max-width: 500px) {
   .sign-out-style{ 
     height: 2rem!important;
     width: 4rem!important;
@@ -165,6 +174,21 @@ align-self: flex-start!important;
 }
 
 /*MAIN LANDING*/
+@media all and (max-width: 500px){
+  .main-Head-Search{
+    /* position: absolute!important; */
+    /* align-self: center!important; */
+    /* margin-bottom: 18rem!important; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+  }
+  .find-your-day{
+    font-size: 1.5rem!important;
+  }
+
+}
 .main-Div{
   display: flex!important;
   justify-content: center!important;
@@ -220,27 +244,64 @@ margin-left: 1rem!important;
 }
 
 /*Profile*/
-
+@media all and (max-width: 500px){
+  .user-Profile-Card{
+    width: 40%!important;
+  }
+  .user-Profile-Card{
+    display: flex!important;
+    margin-top: 2rem!important;
+    width: 90%!important;
+    flex-direction: row!important;
+    border-radius: 1rem!important;
+    align-items: center!important;
+    margin-right: auto!important;
+    margin-left: auto!important;
+  }
+  
+  .user-profile-image{
+    margin-top: 1rem!important;
+    height: 100px!important;
+    width: 100px!important;
+    border-radius: 50%!important;
+    object-fit: cover!important;
+    margin-bottom: 1rem!important;
+  }
+  .profile-Info-Div{
+    margin: 10px!important;
+    margin-right: 40px!important;
+  }
+  .profile-Interest-Div{
+    
+    margin: 10px!important;
+  }
+}
 .user-Profile-Card{
   display: flex!important;
   margin-top: 2rem!important;
-  width: 80%!important;
+  width: 90%!important;
   flex-direction: row!important;
   border-radius: 1rem!important;
   align-items: center!important;
   margin-right: auto!important;
   margin-left: auto!important;
 }
-.user-Profile-Image{
-  width: 400px!important;
+
+.user-form-image{
+  margin-top: 1rem!important;
+  height: 150px!important;
+  width: 150px!important;
+  border-radius: 50%!important;
+  object-fit: cover!important;
+  margin-bottom: 1rem!important;
 }
 .profile-Info-Div{
   margin: 10px!important;
   margin-right: 40px!important;
-  width: 100%!important;
+  width: 35%!important;
 }
 .profile-Interest-Div{
-  width: 100%!important;
+  width: 35%!important;
   margin: 10px!important;
 }
 .profile-events-header{
@@ -368,10 +429,10 @@ margin-left: 1rem!important;
   display: flex!important;
   margin-top: .5rem!important;
   margin-bottom: .5rem!important;
+  align-items: center;
 }
 .event-card-username{
-  margin-left: .6rem!important;
-  margin-top: .4rem!important;
+  margin-left: .5rem;
 }
 .event-card-dropdown{
   align-self: center!important;
@@ -478,11 +539,25 @@ margin-left: 1rem!important;
   margin: 8px!important;
 }
 
-@media all and (max-width: 400px) {
+@media all and (max-width: 500px) {
 .day-card {
-  width: 80%!important;
+  width: 100%!important;
+}
+.day-card-image{
+  height: 160px!important;
+  width: 220px!important; 
 }
 
+.star-rating-tooltip{
+  font-size: 8px!important;
+}
+
+
+}
+.day-card-image{
+  max-height: 265px!important;
+  max-width: 353px!important; 
+  object-fit: cover!important;
 }
 
 .day-card-head{
@@ -504,11 +579,12 @@ margin-left: 1rem!important;
   display: flex!important;
   margin-top: .5rem!important;
   margin-bottom: .5rem!important;
+  align-items: center;
 }
 .day-card-username{
-  margin-left: .6rem!important;
-  margin-top: .4rem!important;
+  margin-left: .5rem;
 }
+
 .day-card-bottom{
   display:flex!important;
   flex-direction: row!important; 
